--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^7.0.5",
+    "@loopback/authentication-jwt": "^0.7.5",
     "@loopback/boot": "^3.1.2",
     "@loopback/core": "^2.13.1",
     "@loopback/graphql": "^0.2.3",
